# CaptsoneProject

./: .env  .env.example  .gitignore  Makefile  README.md  alembic.ini  api_log.txt  demo.py  docker-compose.yml  ml_debug.txt  project_structure.txt  pyproject.toml  refs.txt
alembic/: env.py  script.py.mako
alembic/versions/: 895e978f0c5a_baseline_existing_schema.py  dde071ce0e13_add_last_login_ip_to_users.py
data-hub/: relationships.json
data-hub/duckdb/: analytics.sql
data-hub/postgres/: agent_schema.sql  analytics_schema.sql  auth_schema.sql  ml_schema.sql  rag_schema.sql  schema.sql
docs/: 00_Overview.docx  01_Common_Package.docx  02_Data_Hub.docx  04_API_Gateway.docx  05_Data_Simulator.docx  07_Docker_and_Infra.docx  evaluation_report.md
docs/phase_1_docs/: 03_Ingestion_Pipeline.docx  06_Dashboard.docx  08_End_to_End_Flow.docx
evaluation/ml/: anomaly_eval.py  forecast_eval.py  risk_eval.py
evaluation/rag/: generation_eval.py  ground_truth.json  retrieval_eval.py  threshold_analysis.py
evaluation/results/: anomaly_eval.json  forecast_backtest.json  generation_600.json  generation_600_t0.json  retrieval_600.json  (+3 more)
scripts/: demo.py
services/ingestion/: pyproject.toml
services/ingestion/app/: loaders.py  pipeline.py  pyproject.toml  transforms.py  validation.py
services/ingestion/app/connectors/: base.py  csv_connector.py
services/ingestion/app/mapping/: confirm.py  loader.py  suggester.py
services/ingestion/app/profiling/: feature_extract.py  profiler.py
tests/: conftest.py  test_agent.py  test_analytics.py  test_api.py  test_ingestion.py
(+127 files in other folders)
