[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-ingestion"
version = "0.1.0"
description = "Ingestion pipeline: profiling, mapping, connectors, validation, transforms, and hub loaders."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Suru" }]

dependencies = [
    "pandas>=2.1,<3.0",
    "numpy>=1.26,<3.0",
    "anthropic>=0.25,<1.0",
    "sqlalchemy>=2.0,<2.1",
]

[tool.setuptools]
packages = [
    "app",
    "app.connectors",
    "app.profiling",
    "app.mapping",
]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
extend = "../../pyproject.toml"
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["D203", "D213", "E501", "B008", "UP042"]